feat: add get by taskId
